deletestack script, started on a lambda function

--- a/phaselist.yml
+++ b/phaselist.yml
@@ -7,6 +7,33 @@ Parameters:
     Default: phaselist
 
 Resources:
+  PhaseListRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Principal:
+              Service:
+                - "ecs.amazonaws.com"
+              Action:
+                - "sts:AssumeRole"
+      RoleName: {"Fn::Join": ["", [{"Ref": "AWS::Region"}, {"Ref": "PhaseList"}]]}
+
+  PhaseListLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      Description: "Test Lambda Function"
+      FunctionName: PhaseList
+      Handler: index.my_handler
+      MemorySize: 128
+      Role: !Ref LambdaRole
+      Runtime: python2.7
+      Code:
+        ZipFile: lambda/lambda.zip
+
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
