--- a/cfn_phaselist.yaml
+++ b/cfn_phaselist.yaml
@@ -36,10 +36,36 @@ Resources:
             Principal: 
               Service: 
                 - "s3.amazonaws.com"
+              Service:
+                - "lambda.amazonaws.com"
             Action:
               -  "sts:AssumeRole"
       Path: "/"
       RoleName: {"Fn::Join": ["", [{"Ref": "AWS::Region"}, {"Ref": "PhaseListBucketName"}]]}
+
+  PhaseListLambdaExecutionPolicy:
+    DependsOn: PhaseListRole
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: PhaseListUpdateHTMLRolePolicy
+      Roles: 
+        - 
+          !Ref "PhaseListRole"
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Action: 
+              - "s3:PutObject"
+            Resource:
+              Fn::Join:
+                - ""
+                -
+                  - "arn:aws:s3:::"
+                  -
+                    Ref: PhaseListBucketName
+                  - "/*"
 
 #  PhaseListLambda:
 #    Type: AWS::Lambda::Function
@@ -61,7 +87,6 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: phaselist.html
         ErrorDocument: error.html
-    DeletionPolicy: Retain
   S3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
@@ -83,7 +108,6 @@ Resources:
                   -
                     Ref: PhaseListBucketName
                   - "/*"
-            Principal: "*"
 
 Outputs:
   WebsiteURL:
