--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,4 +1,8 @@
 steps:
+  - plugins:
+      - shellcheck#v1.1.2:
+          files: scripts/*.sh
+
   - command: "docker build -t pkumaschow/phaselist ."
     label: "build docker image"
 
