--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,6 +2,7 @@ steps:
   - plugins:
       - shellcheck#v1.1.2:
           files: scripts/*.sh
+        label: "check scripts"
 
   - command: "docker build -t pkumaschow/phaselist ."
     label: "build docker image"
