added label to buildkite shellcheck plugin

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,8 +1,8 @@
 steps:
-  - plugins:
-      - shellcheck#v1.1.2:
+    - label: ":check scripts:"
+      plugins:
+        - shellcheck#v1.1.2:
           files: scripts/*.sh
-          label: "check scripts"
 
   - command: "docker build -t pkumaschow/phaselist ."
     label: "build docker image"
